--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar bg-base-300 bg-neutral">
     <div class="flex-1">
-      <a class="btn btn-ghost normal-case text-xl">RecipeBook</a>
+      <a class="btn btn-ghost normal-case text-xl " [routerLink]="['/landing']">RecipeBook</a>
     </div>
     <div class="flex-none">
       <ul class="menu menu-horizontal p-0">
